--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "hammerjs": "^2.0.8",
+    "idb-keyval": "^3.2.0",
     "lodash-es": "^4.17.15",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
