--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "faker": "^4.1.0",
     "hammerjs": "^2.0.8",
     "idb-keyval": "^3.2.0",
     "lodash-es": "^4.17.15",
